--- a/css/editor-modal.css
+++ b/css/editor-modal.css
@@ -92,6 +92,9 @@
         overflow-y: hidden;
         -webkit-overflow-scrolling: touch;
         scrollbar-width: none;
+        position: sticky;
+        top: 0;
+        z-index: 10;
     }
     #editModal .modal-content .lne-toolbar::-webkit-scrollbar { display: none; }
 
